--- a/Energetic/Views/Home/Statistic/player.cshtml
+++ b/Energetic/Views/Home/Statistic/player.cshtml
@@ -20,10 +20,10 @@
             <section class="elements">
                 <section class="player">
                     <section class="row">
-                        <section class=" col-lg-6 col-md-12 col-sm-12 col-12 player_photo">
+                        <section class=" col-lg-6 col-md-6 col-sm-6 col-6 image">
                             <img src="@Url.Content(Model.Photo)" width="700" height="700"  />
                         </section>
-                        <section class=" col-lg-6 col-md-12 col-sm-12 col-12 player_info">
+                        <section class=" col-lg-6 col-md-6 col-sm-6 col-6 player_info">
 
                             <section class="player_info_name">
                                 <p>Номер</p>
@@ -41,7 +41,7 @@
                                 <p> @Model.Birthday</p>
                                 <p> @Model.Playes</p>
                                 <p> @Model.Goals</p>
-                                <p class="yellow_card"> @Model.YellowCard</p>
+                                <p> @Model.YellowCard</p>
                                 <p> @Model.RedCard</p>
                             </section>
                         </section>
