--- a/Energetic/Content/Club/managment.css
+++ b/Energetic/Content/Club/managment.css
@@ -1,9 +1,3 @@
-
-
-
-
-/*----------FUULNAME-------------*/
-
 .container {
     position: absolute;
     margin-top: 150px;
@@ -17,27 +11,27 @@
     text-align: center;
 }
 
-
-/*----------LISTCONTENT-------------*/
 .elements {
     width: 100%;
     margin-top: 500px;
 }
 
-
-
 .item {
+    color: #0E0354;
     margin-bottom: 4em;
-   
+    padding-top:2em;
 }
+   
+
 
     .item_name {
         height:90px;
+
         flex-wrap: wrap;
         font-family: Roboto;
         font-style: normal;      
         font-size: 2.0em;
-        color: #0E0354;
+        
         text-align:center;
         justify-content:center;
     }
@@ -51,24 +45,33 @@
         font-size: 2.0em;
         text-align:center;
         height: 90px;
-        color: #0E0354;
+        
+       
+
     }
 
 .image {
-    width:500px;
-    height:auto;
-    position:relative;
-    justify-content:center;
-    text-align:center;
+    margin-top:1em;
+    position: relative;
+    overflow: hidden;
+    width: 400px;
+    height: 400px;
+    margin-left: 2em;
+    margin-right: 2em;
+    margin-bottom: 2em;
+ left:50%;
+ margin-left:-200px;
 }
 
-.image img {
-    position:relative;
-    width:200px;
-    margin-top:1.7em;
-    margin-bottom: 1.3em;
-}
-/*----------WORKPLACE-------------*/
+    .image img {
+        position: relative;
+        height:100%;
+        z-index: 1;
+        top: 50%;
+        left: 50%;
+        transform: translate3d(-50%,-50%,0);
+        
+    }
 
 .element {
     padding: 20px 20px;
