--- a/Energetic/Content/Club/usualInformation.css
+++ b/Energetic/Content/Club/usualInformation.css
@@ -1,30 +1,21 @@
-
-
-/*----------FUULNAME-------------*/
-
 .container{
     position:absolute;
     margin-top: 150px;
     width: 100%;
     padding: 30px;
 }
+
 .fullName {
     font-size: 3.0em;
     color: #0E0354;
     text-align: center;
 }
 
-
-/*----------LISTCONTENT-------------*/
 .elements {
    
     width: 100%;
     margin-top: 300px;
-   margin-bottom:20px;
 }
-
-
-/*----------WORKPLACE-------------*/
 
 .info {
     justify-content: center;
@@ -41,6 +32,7 @@
     font-weight:bolder;
     
 }
+
 .text{
     position:relative;
     width:100%;
@@ -54,12 +46,10 @@
     width:100%;
 }
 
-
-
 .photoL {
     justify-content: center;
     overflow: hidden;
     position: relative;
-    left: 50%;
-    margin-left: -1000px;
+   text-align:center;
+   margin:1em;
 }
