--- a/Energetic/Content/Multimedia/album.css
+++ b/Energetic/Content/Multimedia/album.css
@@ -25,74 +25,26 @@
     display: flex;
     flex-wrap: wrap;
 }
-.album{
-    position: relative;
-    overflow:hidden;
-    width:600px;
-    height:400px;
+
+.album {
     margin-left:2em;
-    margin-right:2em;
-    margin-bottom:4em;
-   
 }
-.name {
-    font-size: 3.0em;
-    color: #14056C;
-    text-align: center;
-    font-weight: bold;
-}
-.img{
 
-    position:absolute;
-    z-index:1;
-height:400px;
-width:auto;
-top:50%;
-left:50%;
-transform: translate3d(-50%,-50%,0);
-
-
+.image {
+    position: relative;
+    overflow: hidden;
+    width: 600px;
+    height: 400px;
+    margin-right: 2em;
 }
-.hidden{
-    position:absolute;
-    bottom:0;
-    left:0;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    z-index:2;
-    width:100%;
-    height:100%;
-}
-.hidden_item{
-    position:relative;
-    width: 289px;
-    height: 107px;
-    border: 4px solid #FFFFFF;
-    top:50%;
-    left:50%;
-    transform:translate3d(-50%,-50%,0);
-    display:none;
-    z-index:3;
-    box-sizing: border-box;
 
+    .image img {
+        position: relative;
+        width: 100%;
+        z-index: 1;
+        top: 50%;
+        left: 50%;
+        transform: translate3d(-50%,-50%,0);
+    }
 
-
-}
-.hidden_item p{
-    font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
-    text-align: center;
-    margin-top:1.5em;
-    color:#FFFFFF;
-}
-.album:hover .hidden_item{
-    display: block;
-    transition:7s ease-in-out;
-
-}
-.album:hover .hidden{
-    background-color:rgba(0,0,0,.5);
-}
 
