--- a/Energetic/Content/Multimedia/albums.css
+++ b/Energetic/Content/Multimedia/albums.css
@@ -28,29 +28,38 @@
 .album{
     position: relative;
     overflow:hidden;
-    width:565px;
-    height:468px;
+    width:600px;
+    height:600px;
     margin-left:2em;
     margin-right:2em;
     margin-bottom:4em;
 }
 .name {
     font-size: 2.0em;
-    padding-bottom:100px;
+    padding-bottom:40px;
     color: #14056C;
     text-align: center;
     font-weight: bold;
 }
-.img {
+.image {
     
     position: relative;
-    z-index: 1;
-    top: 50%;
-    left: 50%;
-    transform: translate3d(-50%,-50%,0);
-    height:645px;
-
+    overflow: hidden;
+    width: 600px;
+    height: 300px;
+    margin-right: 2em;
+    
 }
+
+    .image img {
+        position: relative;
+        width:120%;
+        z-index: 1;
+        top: 50%;
+        left: 50%;
+        transform: translate3d(-50%,-50%,0);
+    }
+
 .hidden {
     position: absolute;
     bottom: 0;
@@ -60,7 +69,7 @@
     text-align: center;
     z-index: 2;
     width: 100%;
-    height: 360px;
+    height: 300px;
 }
 
 .hidden_item {
