--- a/Energetic/Content/Team/coachs.css
+++ b/Energetic/Content/Team/coachs.css
@@ -28,17 +28,28 @@
     display: flex;
     flex-wrap: wrap;   
  }
- 
- .person{
-     display: flex;
-     padding: 30px;
-     
- }
- 
- .img{ 
+
+.person {
+    display: flex;
+    padding: 30px;
+    color: #0E0354;
+}
+   
+
+.image {
+    position:relative;
+    height:400px;
+    width:400px;
+    overflow:hidden;
+}
+ .img{
+     position:relative;
     width: auto;
     height: 100%;
     display: block;
+    left:50%;
+    top:50%;
+    transform:translate3d(-50%,-50%,0);
  }
  
  .informations{
@@ -52,13 +63,13 @@
  }
 
 .Name {
-    color: #0E0354;
+    
     width: 50%;
     font-size: 1.5em;
     padding: 0px 30px;
 }
 .Value {
-    color: #0E0354;
+    
     width: 50%;
     font-size: 24px;
     padding: 0px 30px;
