--- a/Energetic/Content/Team/legends.css
+++ b/Energetic/Content/Team/legends.css
@@ -36,25 +36,25 @@
 }
 
 .image {
+    margin-top: 1em;
     position: relative;
     overflow: hidden;
     width: 400px;
     height: 400px;
-    margin-left: 2em;
     margin-right: 2em;
-    margin-bottom: 0.5em;
-    font-size: 1.5em;
+    margin-bottom: 2em;
 }
 
 
 
-.img {
-    position: absolute;
-    z-index: 1;
-    top: 50%;
-    left: 50%;
-    transform: translate3d(-50%,-50%,0);
-}
+    .image img {
+        position: relative;
+        height: 100%;
+        z-index: 1;
+        top: 50%;
+        left: 50%;
+        transform: translate3d(-50%,-50%,0);
+    }
 
 .hidden {
     position: absolute;
