--- a/Energetic/Content/footer.css
+++ b/Energetic/Content/footer.css
@@ -5,19 +5,24 @@
 body {
     font-family: 'Roboto', sans-serif;
     text-decoration: none;
-    background-color: #E5E5E5;
+    background-color: #EBEEFF;
+    
     margin: 0;
 }
 
-#footer {
-    float: inline-end;
-    flex: 0 0 auto;
-    width: 100%;
-    background: #0E0354;
-    text-align: center;
-    padding-top: 2.0em;
-    content: "";
-}
+
+
+    #footer {
+        float: inline-end;
+        flex: 0 0 auto;
+        width: 100%;
+        background: #0E0354;
+        text-align: center;
+        padding-top: 2.0em;
+        content: "";
+    }
+
+
 
 #vk {
 width:130px;
