--- a/Energetic/Views/Home/Multimedia/album.cshtml
+++ b/Energetic/Views/Home/Multimedia/album.cshtml
@@ -25,8 +25,10 @@
 
           @foreach (var photo in Model.Photos)
           {
-            <section class="album">     
+            <section class="album"> 
+                <section class="image">
                     <img class="img" src="@Url.Content(photo.Url)" title="альбом" />
+                </section>
             </section>
 
           }
