--- a/Energetic/Content/index.css
+++ b/Energetic/Content/index.css
@@ -136,21 +136,10 @@ a {
 }
 
 
-
-.tour {
-    position: relative;
-    padding-left: 1.0em;
-    padding-top: 1.0em;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 1.2em;
-    
-}
-
 .teams {
     position: relative;
     justify-content: center;
-    padding-top: 1.5em;
+    padding-top: 2.5em;
     font-style: normal;
     font-weight: normal;
     font-size: 1.5em;
@@ -160,14 +149,7 @@ a {
     
 }
 
-.first_team {
-    margin-right: 5.5em;
-}
 
-
- 
-.second_team {
-}
 
 .score {
     position: relative;
@@ -175,6 +157,7 @@ a {
     font-style: normal;
     font-weight: normal;
     font-size: 2.0em;
+    margin-top:0.5em;
     align-items: center;
     text-align: center;
     
@@ -186,19 +169,9 @@ a {
     font-style: normal;
     font-weight: normal;
     font-size: 1.3em;
-   
+    padding-left:2em;
+    padding-bottom:2em;
 }
-
-.city {
-    position: relative;
-    margin-left: 0.7em;
-    padding-bottom: 10px;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 1.3em;
-    
-}
-
 
 
 .trophies {
@@ -263,7 +236,6 @@ a {
 
 .tournament_table_header p {
     font-style: normal;
-    font-weight: bold;
     font-size: 64px;
     align-items: center;
     text-align: center;
@@ -278,6 +250,7 @@ a {
     text-align:center;
     font-size:1.5em;
     margin-bottom:3.0em;
+
 }
 
     .table:hover {
