--- a/Energetic/Content/Club/stadiums.css
+++ b/Energetic/Content/Club/stadiums.css
@@ -1,7 +1,7 @@
 
 .container{
     position:absolute;
-    margin-top: 150px;
+    margin-top: 220px;
     padding:30px;
     width: 100%;
 }
@@ -41,7 +41,7 @@
     color: #0E0354;
     padding: 1em 1em;
     margin: 1em 0em 1em 0em;
-    
+    flex-wrap:wrap;
 }
 
 .text p {
@@ -77,7 +77,6 @@
     top:50%;
     left:50%;
     transform:translate3d(-50%,-50%,0);
-
 }
 
 .hidden{
@@ -103,9 +102,6 @@
     display:none;
     z-index:3;
     box-sizing: border-box;
-
-
-
 }
 
 .hidden_item p{
@@ -130,6 +126,27 @@
 .row{
     margin-right:0 !important;
 }
+.img {
+    width: 100%;
+}
 
 
+@media (max-width:765px) {
+    .text p {
+        margin-left:0.5em;
+        font-style: normal;
+        font-weight: normal;
+        margin-top: 1.2em;
+        font-size: 20px;
+    }
 
+    .image {
+        position: relative;
+        overflow: hidden;
+        width: 280px;
+        height: 120px;
+       margin-left:0px;
+
+    }
+    
+}
