--- a/Energetic/Content/footer.css
+++ b/Energetic/Content/footer.css
@@ -7,12 +7,13 @@ body {
     text-decoration: none;
     background-color: #EBEEFF;
     
-    margin: 0;
+   
 }
 
 
 
     #footer {
+        
         float: inline-end;
         flex: 0 0 auto;
         width: 100%;
@@ -40,7 +41,8 @@ width:130px;
 }
 
 .partners {
-    
+    margin:0em !important;
+    padding:0em !important;
     font-size: 1.5em;
     color: #FFFFFF;
 }
@@ -52,9 +54,37 @@ width:130px;
     text-align: center;
     padding: 0px 0px;
     color: #FFFFFF;
+
 }
 
 .url {
     margin-bottom: 1.0em;
-   
+  
+}
+
+@media (max-width: 500px) {
+    #vk {
+        width:70px;
+    }
+    #youtube {
+        width: 70px;
+    }
+    
+    .row {
+        padding:0px !important;
+        margin:0px !important;
+    }
+
+    .partners {
+        margin: 0em !important;
+        padding: 0em !important;
+        font-size: 1.0em;
+        color: #FFFFFF;
+    }
+
+    .url {
+        padding: 10px 0px !important;
+        margin: 0px !important;
+    }
+
 }
