--- a/Energetic/Content/index.css
+++ b/Energetic/Content/index.css
@@ -28,9 +28,50 @@ a {
 /*----------FUULNAME-------------*/
 .container {
     position: relative;
-    margin-top: 140px;
+    margin-top: 240px;
     width: 100%;
-    padding: 30px;
+    
+}
+
+@media (max-width:765px) {
+    
+    .container {
+        position: relative;
+        margin-top: 300px;
+        width: 100%;
+        
+       
+    }
+
+    .matches_main {
+        font-size:0.7em;
+        position: relative;
+        margin-bottom: 3em;
+        justify-content: center;
+        display: flex;
+        flex-wrap: wrap;
+        top: 1.0em;
+        width: 100%;
+        height: auto;
+        padding-left: 20px;
+    }
+
+    .trophies {
+        font-size:0.7em;
+        position: relative;
+        display: flex;
+        flex-wrap: wrap;
+        padding-bottom: 1em;
+        padding-top: 1em;
+        top: 6.0em;
+        margin-bottom: 10em;
+        background: #0E0354;
+    }
+
+    .element {
+        font-size:0.4em;
+        margin-top: 1em;
+    }
 }
 
 .fullName {
@@ -62,7 +103,7 @@ a {
     background-position-y: center;
     background-position-x: center;
     background-size: cover;
-    margin-bottom: 4em;
+    margin-bottom: 3em;
     justify-content: center;
 }
 
@@ -204,6 +245,7 @@ a {
 }
 
 .trophy_section {
+
     position: relative;
     top: 2.5em;
 }
@@ -265,3 +307,13 @@ a {
     margin-top: 1em;
 }
 
+@media(max-width:765px) {
+    .name {
+        position: relative;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 0.8em;
+        color: #FFFFFF;
+        height: 100px;
+    }
+}
