--- a/Energetic/Views/Home/Club/usualInformation.cshtml
+++ b/Energetic/Views/Home/Club/usualInformation.cshtml
@@ -35,7 +35,7 @@
             <section class="photo">
                 <section class="photoL">
 
-                <img width="2000px" src="@Url.Content(Model.Photo)" />
+                <img src="@Url.Content(Model.Photo)" />
                 </section>
             </section>
        
