--- a/Energetic/Views/Shared/_Layout.cshtml
+++ b/Energetic/Views/Shared/_Layout.cshtml
@@ -20,8 +20,8 @@
 <body>
     <header id="header">
         <div class="row">
-            <div class="col-lg-2  col-sm-2 col-md-2 col-2 logo"><img src="../../Images/Logo.png" height="120" width="150" /></div>
-            <div class="col-lg-2 col-sm-2  col-md-2 col-2 menu" id="club">
+            <div class="col-lg-2  col-sm-4 col-md-2 col-4 logo"><img src="../../Images/Logo.png" /></div>
+            <div class="col-lg-2 col-sm-4  col-md-2 col-4 menu" id="club">
                 <section class="menu_header" id="header_club">Клуб</section>
                 <section class="menu_item" id="menu_club">
                     <section class="menu_link"><a id="info" href="@Url.Action("usualInformation", "Home")">Общая информация</a></section>
@@ -31,7 +31,7 @@
                     <section class="menu_link"><a id="history" href="@Url.Action("history", "Home")">История</a></section>
                 </section>
             </div>
-            <div class="col-lg-2 col-sm-2  col-md-2 col-2 menu" id="team">
+            <div class="col-lg-2 col-sm-4  col-md-2 col-4 menu" id="team">
                 <section class="menu_header" id="header_team">Команда</section>
                 <section class="menu_item" id="menu_team">
                     <section class="menu_link"><a id="coach" href="@Url.Action("coachs", "Home")">Тренерский штаб</a></section>
@@ -39,24 +39,24 @@
                     <section class="menu_link"><a id="legends" href="@Url.Action("legends", "Home")">Зал славы</a></section>
                 </section>
             </div>
-            <div class="col-lg-2 col-sm-2  col-md-2 col-2 menu">
-                <section class="menu_header" id="header_statistic">Статитстика</section>
+            <div class="col-lg-2 col-sm-4  col-md-2 col-4 menu">
+                <section class="menu_header" id="header_statistic">Статистика</section>
                 <section class="menu_item" id="menu_statistic">
                     <section class="menu_link"><a id="players" href="@Url.Action("players", "Home")">Игроки</a></section>
                     <section class="menu_link"><a id="main_team" href="@Url.Action("team", "Home")">Команда</a></section>
 
                 </section>
             </div>
-            <div class="col-lg-2 col-sm-2  col-md-2 col-2 menu" id="multimedia">
+            <div class="col-lg-2 col-sm-4  col-md-2 col-4 menu" id="multimedia">
                 <section class="menu_header" id="header_multi">Мультимедиа</section>
                 <section class="menu_item" id="menu_multi">
                     <section class="menu_link"><a id="gallery" href="@Url.Action("albums", "Home")">Галерея</a></section>
                     <section class="menu_link"><a id="video" href="@Url.Action("video", "Home")">Видео</a></section>
                 </section>
             </div>
-            <div class="col-lg-2  col-sm-2 col-md-2 col-2 logo">
+            <div class="col-lg-2  col-sm-4 col-md-2 col-4 logo">
                 <a href="@Url.Action("index", "Home")">
-                    <img src="../../Images/Home.png" id="b_exit" height="80" width="80 " />
+                    <img src="../../Images/Home.png" id="b_exit" " />
                 </a>
             </div>
 
